--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+Fabric==1.10.1
 Flask==0.10.1
+Flask-Captcha==0.1.8
 Flask-Mail==0.9.1
+Flask-SQLAlchemy==1.0
+Flask-Testing==0.4.2
 Jinja2==2.7.3
 MarkupSafe==0.23
+Pillow==2.3.0
+SQLAlchemy==0.9.3
 Werkzeug==0.9.6
 amqp==1.4.6
 anyjson==0.3.3
@@ -9,8 +15,19 @@ argparse==1.2.1
 billiard==3.3.0.19
 blinker==1.3
 celery==3.1.17
+ecdsa==0.11
+eventlet==0.16.0
+gevent==1.0.1
+greenlet==0.4.5
+gunicorn==19.1.1
 itsdangerous==0.24
 kombu==3.0.24
+paramiko==1.15.2
+pycrypto==2.6.1
 pytz==2014.10
-wsgiref==0.1.2
 redis==2.10.3
+requests==2.5.1
+shelljob==0.4.4
+six==1.5.2
+uWSGI==2.0.2
+wsgiref==0.1.2
